--- a/src/Candidate.Business/Candidate.Business.csproj
+++ b/src/Candidate.Business/Candidate.Business.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Candidate.Model\Candidate.Model.csproj" />
     <ProjectReference Include="..\Candidate.Repository\Candidate.Repository.csproj" />
   </ItemGroup>
 
