--- a/src/Candidate.Web/appsettings.Development.json
+++ b/src/Candidate.Web/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AppSettings": {
+    "CandidateDbConnectionString": "Data Source=.;Database=Test;Integrated Security=True;Encrypt=false;TrustServerCertificate=True"
+  },
+  "AllowedHosts": "*"
 }
